# Nemesis

./: .gitattributes  .gitignore  Base de donnée.odt  Fonctionnement Nemesis.odt  README.md  projettut.odt
Graphics/: Thumbs.db
Graphics/Game/: Thumbs.db
Graphics/Updater/: Thumbs.db
MCD/: MCD_NEMESIS.mwb  MCD_NEMESIS.mwb.bak  NemesisDB.sql
Préparation/: Cahier des charges.odt
Version 0.0.1/src/: main.cpp
client/client/: CMakeLists.txt  compilation.bat
client/client/include/: Ability.hpp  BasicInterface.cpp  BasicInterface.hpp  Caracteristic.hpp  Character.hpp  Constant.hpp  Drawable.hpp  Game.hpp  GameManager.hpp  InputHandler.hpp  Lobby.hpp  LoginMenu.cpp  LoginMenu.hpp  ManagerGroup.hpp  Monster.hpp  MusicManager.cpp  MusicManager.hpp  NLabel.hpp  NPanel.hpp  NTextField.hpp  NetworkManager.cpp  NetworkManager.hpp  Patch.hpp  Player.hpp  Playlist.hpp  ResourceLoader.cpp  TargetManager.hpp  TextureManager.hpp  Updatable.hpp  VideoPlayer.hpp  VisualObject.hpp  WaitingRoom.hpp  WarmUp.hpp
client/client/res/blender/: splash.blend  splash.blend1
client/client/res/texture/menu/login/: .picasa.ini  Thumbs.db
client/client/src/: Ability.cpp  AnimatableObject.cpp  BasicInterface.cpp  Caracteristic.cpp  Character.cpp  Drawable.cpp  Game.cpp  GameManager.cpp  InputHandler.cpp  Lobby.cpp  LoginMenu.cpp  Monster.cpp  MusicManager.cpp  NButton.cpp  NLabel.cpp  NPanel.cpp  NTextField.cpp  Nemesis.cpp  NetworkManager.cpp  Player.cpp  Playlist.cpp  ResourceLoader.cpp  SplashScreen.cpp  TargetManager.cpp  TextureManager.cpp  VideoPlayer.cpp  VisualObject.cpp  WaitingRoom.cpp  WarmUp.cpp
client/updater/: CMakeLists.txt  README.rst  main.cpp
client/updater/connection/: FTPManager.cpp  FileManager.cpp  ServerConnection.cpp
client/updater/include/connection/: FTPManager.h  FTPManager.hpp  FileManager.h  FileManager.hpp  ServerConnection.h  ServerConnection.hpp
client/updater/include/tools/: Configuration.hpp  HashTool.hpp  Parser.hpp  Patch.hpp
client/updater/include/view/: AnimatableObject.hpp  Button.hpp  Log.hpp  ProgressBar.hpp  RenderEngine.hpp  Surrounder.hpp  VisualObject.hpp
client/updater/res/paint/: Launcher.pdn  PenHead.pdn
client/updater/tools/: Configuration.cpp  HashTool.cpp  Parser.cpp  ParserException.cpp  Vector2Str.cpp
client/updater/view/: AnimatableObject.cpp  Button.cpp  Log.cpp  ProgressBar.cpp  RenderEngine.cpp  Surrounder.cpp  VisualObject.cpp
server/: CMakeLists.txt  main.cpp
server/Game/: CMakeLists.txt  main.cpp
server/Game/clientConnector/: CMakeLists.txt  ClientServer.cpp  ClientThread.cpp  Configuration.cpp  ConsoleDisplayer.cpp  Game.cpp  Player.cpp  Vector2Str.cpp  WarmUp.cpp  tool.cpp
server/Game/connector/: CMakeLists.txt  MySQLConnector.cpp
server/Game/database/: CMakeLists.txt  Querie.cpp  Table.cpp
server/Game/include/clientConnector/: ClientServer.hpp  ClientThread.hpp  Configuration.hpp  ConsoleDisplayer.hpp  Game.hpp  Player.hpp  WarmUp.hpp  tool.hpp
server/Game/include/connector/: MySQLConnector.hpp
server/Game/include/tool/: Configuration.hpp  Constants.hpp  Vector2Str.hpp  tool.hpp
server/Game/res/configuration/: config.conf
server/Game/test/: CMakeLists.txt
server/Game/test/connectorUnitTest/: CMakeLists.txt
server/Game/test/databaseUnitTest/: CMakeLists.txt
server/Game/tool/: CMakeLists.txt  Configuration.cpp  Vector2Str.cpp  tool.cpp
server/Master/: main.cpp
server/Master/database/: Field.cpp
server/Master/include/connector/: MySQLConnector.hpp
server/Master/include/database/: Querie.hpp  Table.hpp
server/Master/include/updater/: Updater.hpp
server/Master/test/connectorUnitTest/: ConnectorUnitTest.cpp
server/Master/test/databaseUnitTest/: FieldUnitTest.cpp  TableUnitTest.cpp
server/Master/tool/: Config.cpp
server/Updater/: Updater.py  compilation.bat  main.cpp
server/Updater/config/: config.conf
server/Updater/include/: ClientThread.hpp  ClientThreadException.hpp  Configuration.hpp  ConsoleDisplayer.hpp  FileManager.hpp  Parser.hpp  ParserException.hpp  SFMLServer.hpp  Tool.hpp
server/Updater/include/parser/: Configuration.hpp  Parser.hpp
server/Updater/include/remote/: Remote.hpp
server/Updater/include/tool/: ConsoleDisplayer.hpp
server/Updater/parser/: Configuration.cpp  Parser.cpp
server/Updater/remote/: Remote.cpp
server/Updater/res/client/: compilation.bat
server/Updater/res/client/include/: AnimatableObject.hpp  InputHandler.hpp  ManagerGroup.hpp  NButton.hpp  NTextField.hpp  TargetManager.hpp  VisualObject.hpp
server/Updater/res/client/src/: LoginMenu.cpp  NTextField.cpp  Nemesis.cpp  NetworkManager.cpp  Playlist.cpp  TargetManager.cpp  VisualObject.cpp
server/Updater/res/files/: filesInfo.txt
server/Updater/src/: ClientThread.cpp  ClientThreadException.cpp  Configuration.cpp  ConsoleDisplayer.cpp  FileManager.cpp  HashTool.cpp  Parser.cpp  ParserException.cpp  SFMLServer.cpp  Tool.cpp  Vector2Str.cpp  main.cpp
server/Updater/tool/: ConsoleDisplayer.cpp
server/connector/: MySQLConnector.cpp
server/database/: CMakeLists.txt  Field.cpp  ItemDB.cpp  MySQL.cpp  MySQLConnector.cpp  Querie.cpp  Table.cpp
server/include/connector/: MySQLConnector.hpp
server/include/database/: Field.hpp  ItemDB.hpp  MySQL.hpp  MySQLConnector.hpp  Table.hpp
server/include/tool/: Config.hpp
server/test/: CMakeLists.txt
server/test/connectorUnitTest/: ConnectorUnitTest.cpp
server/test/databaseUnitTest/: CMakeLists.txt  TableUnitTest.cpp
server/tool/: Config.cpp
tools/: Configuration.cpp  Configuration.hpp  HashTool.cpp  ParserException.cpp  Vector2Str.cpp  Vector2Str.hpp  VisualObject.cpp  VisualObject.hpp
